fix: overflow only for small devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,17 @@ html, body {
     overflow: hidden;
 }
 
+@media (max-height: 1080px) {
+    html, body {
+        overflow: auto;
+    }
+}
+@media (max-width: 1280px) {
+    html, body {
+        overflow: auto;
+    }
+}
+
 body {
     background: var(--bg);
     color: var(--text);
